spec/fixtures/errors/if-with-non-expression-condition.jsx
var React = require("react");

module.exports = class extends React.Component {
  render() {
    return (
      <div>
        <If condition="true">
          <span>IfBlock</span>
        </If>
      </div>
    );
  }
};
